# uvtest

./: README.md  pants.toml  pyproject.toml
config/copybara/: copy.bara.sky
utils/jax-rocm-autoinstall/: README.md  setup.py
